<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/videos_tag"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/video_item_recycler_view"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/video_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_videos_message"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/reviews_tag"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_item_recycler_view"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/review_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_reviews_message"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

</LinearLayout>