<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.niraj.popularmovies2.MovieDetailActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/title_tv"
                tools:text="TestMovie"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_tv"
                    tools:src="@color/cardview_dark_background"
                    android:contentDescription="@string/movie_image_tag"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textSize="16sp"
                        tools:text="2018" />


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/rating_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:textAppearance="@android:style/TextAppearance.Material.Large"
                            android:textSize="24sp"
                            tools:text="8.8/10" />

                        <ImageView
                            android:id="@+id/star_icon"
                            android:contentDescription="@string/star_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/rating_tv"
                            app:layout_constraintStart_toEndOf="@+id/rating_tv"
                            app:layout_constraintTop_toTopOf="@+id/rating_tv"
                            app:srcCompat="@drawable/ic_grade_black_24px" />


                    </android.support.constraint.ConstraintLayout>

                    <include
                        layout="@layout/movie_detail_favorite"/>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/overview_tag"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                tools:text="@string/text_long" />

            <include
                android:id="@+id/movie_extra_detail"
                layout="@layout/activity_movie_detail_extra"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/extra_detail_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

        </LinearLayout>

</ScrollView>
